# 2FA_Authenticator

./: README.md  main.py  pyproject.toml  replit.nix  requirements.txt
data/: accounts.json  backup_codes.txt  encryption.key
encryption/: encryption.py
gui/: add_account_gui.py  backup_and_restore_gui.py  login_gui.py  main_gui.py  verify_code_gui.py
languages/: en.json  es.json
utils/: account_manager.py  auth_manager.py  backup_manager.py  database_manager.py  language_manager.py  logger.py  qr_code_manager.py  settings_manager.py
